--- a/roboshop/roles/mongodb/tasks/main.yml
+++ b/roboshop/roles/mongodb/tasks/main.yml
@@ -1,3 +1,6 @@
-- name: printing name
-  debug:
-    msg: Hello
+- name: Copying Repo files
+  ansible.builtin.copy:
+    src: mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
+
+
