--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Installing nginx
   ansible.builtin.yum:
     name: nginx
-    status: installed
+    state: installed
 
 - name: Removing Old Nginx Files
   ansible.builtin.file:
