--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -18,16 +18,22 @@
   ansible.builtin.copy:
     src: /tmp/frontend/static/
     dest: /usr/share/nginx/html
+    remote_src: yes
+
 
 - name: Copying Nginx config files
   ansible.builtin.template:
     src: nginx.conf
     dest: /etc/nginx/nginx.conf
+    remote_src: yes
+
 
 - name: Copying Roboshop config files
   ansible.builtin.template:
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
+    remote_src: yes
+
 
 - name: Restart Nginx
   ansible.builtin.systemd:
