--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: Copying Frontend content
   ansible.builtin.copy:
-    src: /tmp/frontend/static/
+    src: /tmp/frontend-main/static/
     dest: /usr/share/nginx/html
     remote_src: yes
 
