Completed writing ansible plays for roboshop ansible mutable

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -25,6 +25,14 @@
     src: "https://github.com/roboshop-devops-project/mongodb/archive/main.zip"
     dest: /tmp
     remote_src: yes
-- name: Load shema
+
+- name: Load shemama
+  community.mongodb.mongodb_shell:
+    file: "/tmp/mongodb-main/{{ item }}.js"
+    idempotent: true
+  loop:
+    - catalog
+    - users
+
 
 
