--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: printing name
-  debug:
-    msg: Hello
+- name: Include Nodejs steps from common role
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: python
