--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: printing name
-  debug:
-    msg: Hello
+- name: Include NodeJs steps from common role
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: nodejs
