dependencies for nodeJs extra added

--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -1,6 +1,13 @@
 - name: Setup NodeJS repos
   ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_16.x | bash
 
+- name: Install required dependencies for nodejs
+  ansible.builtin.yum:
+    name:
+      - libstdc++.so.6
+      - libm.so.6
+      - libc.so.6
+
 - name: Install NodeJS
   ansible.builtin.yum:
     name: nodejs
